# tesla

./: README.md
configs/: app.json  config.json
crates/app/: Cargo.toml  README.md
crates/app/src/: http.rs  main.rs  vehicle_monitor.rs
crates/base/: Cargo.toml  build.rs
crates/base/protos/: base.proto  tesla.proto
crates/base/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  local_cache.rs  pika.rs
crates/maind/: Cargo.toml
crates/maind/src/: config.rs  http.rs  local_cache.rs  main.rs
crates/pb/: Cargo.toml  build.rs
crates/pb/protos/tesla/: tesla.proto
crates/pb/src/: lib.rs
crates/tesla-api/: Cargo.toml
crates/tesla-api/src/: lib.rs
docker/: Dockerfile  build_docker.sh  startup_container.sh
docker/configs/: in_docker.json
scripts/: copy_to_docker.sh  start.sh
web/: README.md  package-lock.json  package.json
web/public/: index.html
web/src/: App.tsx  history.js  setupProxy.js
web/src/components/: SmallButton.tsx  TopMenu.tsx
web/src/pages/: SetApiToken.tsx  VehicleDetail.tsx  Vehicles.tsx
web/src/pages/track/: Track.tsx
web/src/services/: ajax.js  tesla.js
