[package]
name = "base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }

[dependencies]
tonic = { version = "0.10", features = ["tls"] }
tracing-subscriber = "0.3"
prost = "0.12"
serde = "1.0.113"
serde_derive = "1.0.113"
itertools = "0.12.0"
log = "0.4.8"
derive_more = "0.99.8"
serde_json = "1.0"
