[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.0"
prost = "0.12"
base = { path = "../base" }
redis = { version = "0.23.0", features = ["aio", "tokio-comp"] }
log = "0.4"
derive_more = "0.99.8"
itertools = "0.12.0"
chrono = "0.4.31"