[package]
name = "maind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tesla-api = { path = "../tesla-api" }
derive_more = "0.99.8"
log = "0.4.0"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
bytes = "0.4"
sha2 = "0.10"
hex-literal = "0.3.4"
rand = "0.8"
base64-url = "1"
regex = "1.7"
itertools = "0.10"
chrono = "0.4"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
futures-util = "*"
pretty_env_logger = "0.4.0"
tracing-subscriber = "0.2"
axum = "0.6"
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
axum-extra = { version = "0.4", features = ["spa"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
hyper = { version = "0.14", features = ["full"] }
eviltransform = { git = "https://github.com/googollee/eviltransform", branch = "master" }
clap = { version = "3.2.6", features = ["derive"] }
pb = { path = "../pb" }
byteorder = "1.0"
prost = "0.11"

[dev-dependencies]
