[package]
name = "pb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
serde = "1.0.113"
serde_derive = "1.0.113"
itertools = "0.9.0"
log = "0.4.8"
tower = { version = "0.4" }
tonic = { version = "0.8", features = ["tls"] }
tower-http = { version = "0.3", features = ["add-extension", "util"] }
http = { version = "0.2" }
http-body = "0.4.2"
hyper = { version = "0.14", features = ["full"] }


[build-dependencies]
tonic-build = { version = "0.8", features = ["prost"] }
