[package]
name = "tesla-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = [
	"json",
	"gzip",
	"multipart",
	"cookies",
] }
derive_more = "0.99.8"
log = "0.4.0"
tokio = { version = "1", features = ["macros", "rt"] }
tokio-test = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
bytes = "0.4"
sha2 = "0.10"
hex-literal = "0.3.4"
rand = "0.8"
base64-url = "1"
regex = "1.7"
itertools = "0.10"
chrono = "0.4"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
futures-util = "*"
pb = { path = "../pb" }

[dev-dependencies]
pretty_env_logger = "0.4.0"
